<resources>
    <string name="app_name">10119901 Latihan2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connect_fb">Connect With Facebook</string>
    <string name="no_account">doesn\'t have account ?</string>
    <string name="no_code">doesn\'t get the code ?</string>
    <string name="txt_register">Register</string>
    <string name="blood_type_promp">Blood Type</string>

    <string-array name="blood_type">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
    </string-array>

    <string name="terms">Agree With Terms and Conditions</string>
    <string name="almost_there_desc">Thank you for registering with us. One more \n step, you need to check email \nto active your account</string>
    <string name="name">Fauzan Muhammad Abdussalam</string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="blood_received">BLOOD RECEIVED</string>
    <string name="thanks">THANKS</string>
    <string name="search_donor">Search Donor</string>
    <string name="search_donor_desc">Search donor near you</string>
    <string name="blood_needed">Blood Needed</string>
    <string name="blood_needed_desc">4 Users need blood</string>
    <string name="message">Message</string>
    <string name="message_desc">5 New Message</string>
    <string name="donor_history">Donor History</string>
    <string name="donor_history_desc">5 Gives, 2 Received</string>
</resources>