<?xml version="1.0" encoding="utf-8"?>
<!--
Nama    : Fauzan Muhammad Abdussalam
NIM     : 10119901
Kelas   : IF-10K
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Profile">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/ic_header_profile"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/ic_side_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/photoProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_pic"
        android:src="@drawable/rounded_profile"
        android:layout_marginTop="120dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/light_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/photoProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/blood_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Blood Type : B"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/blood_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="75"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/txt_dimen_30"
        app:layout_constraintEnd_toStartOf="@id/txt_100"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator1"/>

    <TextView
        android:id="@+id/txt_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/txt_dimen_30"
        app:layout_constraintBottom_toBottomOf="@id/txt_75"
        app:layout_constraintEnd_toStartOf="@id/txt_330"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/txt_75"
        app:layout_constraintTop_toTopOf="@id/txt_75"/>

     <TextView
         android:id="@+id/txt_330"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="330"
         android:textColor="@color/light_blue"
         android:textSize="@dimen/txt_dimen_30"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toEndOf="@id/txt_100"
         app:layout_constraintTop_toTopOf="@id/txt_100"/>

    <TextView
        android:id="@+id/txt_blood_give"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_give"
        android:textColor="@color/font_desc"
        android:textSize="@dimen/txt_dimen_10"
        app:layout_constraintEnd_toEndOf="@id/txt_75"
        app:layout_constraintStart_toStartOf="@id/txt_75"
        app:layout_constraintTop_toBottomOf="@id/txt_75" />

    <TextView
        android:id="@+id/txt_blood_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_received"
        android:textColor="@color/font_desc"
        android:textSize="@dimen/txt_dimen_10"
        app:layout_constraintEnd_toEndOf="@id/txt_100"
        app:layout_constraintStart_toStartOf="@id/txt_100"
        app:layout_constraintTop_toBottomOf="@id/txt_100" />

    <TextView
        android:id="@+id/txt_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:textColor="@color/font_desc"
        android:textSize="@dimen/txt_dimen_10"
        app:layout_constraintEnd_toEndOf="@id/txt_330"
        app:layout_constraintStart_toStartOf="@id/txt_330"
        app:layout_constraintTop_toBottomOf="@id/txt_330" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/txt_thanks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/img_search_donor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:src="@drawable/ic_search_donor"
        app:layout_constraintTop_toBottomOf="@id/separator2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/img_blood_needed"
        app:layout_constraintHorizontal_weight="1"/>

    <ImageView
        android:id="@+id/img_blood_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_blood_needed"
        app:layout_constraintLeft_toRightOf="@+id/img_search_donor"
        app:layout_constraintTop_toTopOf="@id/img_search_donor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/txt_search_donor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_donor"
        android:textColor="@color/font_title"
        android:textSize="@dimen/txt_dimen_18"
        app:layout_constraintEnd_toEndOf="@id/img_search_donor"
        app:layout_constraintStart_toStartOf="@id/img_search_donor"
        app:layout_constraintTop_toBottomOf="@id/img_search_donor"/>

    <TextView
        android:id="@+id/txt_search_donor_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_donor_desc"
        android:textColor="@color/font_desc"
        android:textSize="@dimen/txt_dimen_12"
        app:layout_constraintEnd_toEndOf="@id/txt_search_donor"
        app:layout_constraintStart_toStartOf="@id/txt_search_donor"
        app:layout_constraintTop_toBottomOf="@id/txt_search_donor"/>

    <TextView
        android:id="@+id/txt_blood_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_needed"
        android:textColor="@color/font_title"
        android:textSize="@dimen/txt_dimen_18"
        app:layout_constraintEnd_toEndOf="@id/img_blood_needed"
        app:layout_constraintStart_toStartOf="@id/img_blood_needed"
        app:layout_constraintTop_toBottomOf="@id/img_blood_needed"/>

    <TextView
        android:id="@+id/txt_blood_needed_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_needed_desc"
        android:textColor="@color/font_desc"
        android:textSize="@dimen/txt_dimen_12"
        app:layout_constraintEnd_toEndOf="@id/txt_blood_needed"
        app:layout_constraintStart_toStartOf="@id/txt_blood_needed"
        app:layout_constraintTop_toBottomOf="@id/txt_blood_needed"/>

    <ImageView
        android:id="@+id/img_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:src="@drawable/ic_message"
        app:layout_constraintTop_toBottomOf="@id/txt_blood_needed_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/img_donor_history"
        app:layout_constraintHorizontal_weight="1"/>

    <ImageView
        android:id="@+id/img_donor_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_donor_history"
        app:layout_constraintLeft_toRightOf="@+id/img_message"
        app:layout_constraintTop_toTopOf="@id/img_message"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textColor="@color/font_title"
        android:textSize="@dimen/txt_dimen_18"
        app:layout_constraintEnd_toEndOf="@id/img_message"
        app:layout_constraintStart_toStartOf="@id/img_message"
        app:layout_constraintTop_toBottomOf="@id/img_message"/>

    <TextView
        android:id="@+id/txt_message_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_desc"
        android:textColor="@color/font_desc"
        android:textSize="@dimen/txt_dimen_12"
        app:layout_constraintEnd_toEndOf="@id/txt_message"
        app:layout_constraintStart_toStartOf="@id/txt_message"
        app:layout_constraintTop_toBottomOf="@id/txt_message"/>

    <TextView
        android:id="@+id/txt_donor_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_history"
        android:textColor="@color/font_title"
        android:textSize="@dimen/txt_dimen_18"
        app:layout_constraintEnd_toEndOf="@id/img_donor_history"
        app:layout_constraintStart_toStartOf="@id/img_donor_history"
        app:layout_constraintTop_toBottomOf="@id/img_donor_history"/>

    <TextView
        android:id="@+id/txt_donor_history_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_history_desc"
        android:textColor="@color/font_desc"
        android:textSize="@dimen/txt_dimen_12"
        app:layout_constraintEnd_toEndOf="@id/txt_donor_history"
        app:layout_constraintStart_toStartOf="@id/txt_donor_history"
        app:layout_constraintTop_toBottomOf="@id/txt_donor_history"/>

</androidx.constraintlayout.widget.ConstraintLayout>